# ch_util

./: .gitattributes  .gitignore  .travis.yml  CHANGELOG.md  Dockerfile  LICENSE  MANIFEST.in  README  README.md  bitbucket-pipelines.yml  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: main.yaml  main.yml  sphinx.yaml  sphinx.yml
ch_util/: __init__.py  _db_tables.py  _version.py  andata.py  cal_utils.py  chan_monitor.py  connectdb.py  data_index.py  data_quality.py  ephemeris.py  finder.py  fluxcat.py  hfbcat.py  holography.py  holography_cli.py  layout.py  ni_utils.py  plot.py  rfi.py  timing.py  tools.py
ch_util/catalogs/: atnf_psrcat.json
ch_util/tests/: data_paths.py  test_andata.py  test_andata_archive2.py  test_andata_archive3.py  test_andata_dist.py  test_db.py  test_ephemeris.py  test_layout.py
doc/: Makefile  andata.rst  conf.py  data_index.rst  ephemeris.rst  index.rst  layout.rst  plot.rst  requirements.txt  tools.rst
doc/_autosummary/: ch_util._db_tables.rst  ch_util.chan_monitor.rst  ch_util.connectdb.rst  ch_util.data_index.rst  ch_util.data_quality.rst  ch_util.ephemeris.rst  ch_util.finder.rst  ch_util.fluxcat.rst  ch_util.ni_utils.rst  ch_util.timing.rst  ch_util.tools.rst
doc/guide/: Makefile  conf.py  developer_guide.rst  index.rst  packages.rst  quickstart.rst  scinet.rst
docs/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  reference.html  search.html  searchindex.js
docs/.doctrees/: environment.pickle  index.doctree  reference.doctree
docs/.doctrees/_autosummary/: ch_util._db_tables.doctree  ch_util.andata.doctree  ch_util.cal_utils.doctree  ch_util.chan_monitor.doctree  ch_util.connectdb.doctree  ch_util.data_index.doctree  ch_util.data_quality.doctree  ch_util.ephemeris.doctree  ch_util.finder.doctree  ch_util.fluxcat.doctree  ch_util.hfbcat.doctree  ch_util.holography.doctree  ch_util.layout.doctree  ch_util.ni_utils.doctree  ch_util.plot.doctree  ch_util.rfi.doctree  ch_util.timing.doctree  ch_util.tools.doctree
docs/_autosummary/: ch_util._db_tables.html  ch_util.andata.html  ch_util.cal_utils.html  ch_util.chan_monitor.html  ch_util.connectdb.html  ch_util.data_index.html  ch_util.data_quality.html  ch_util.ephemeris.html  ch_util.finder.html  ch_util.fluxcat.html  ch_util.hfbcat.html  ch_util.holography.html  ch_util.layout.html  ch_util.ni_utils.html  ch_util.plot.html  ch_util.rfi.html  ch_util.timing.html  ch_util.tools.html
docs/_modules/: index.html
docs/_modules/ch_util/: _db_tables.html  andata.html  cal_utils.html  chan_monitor.html  data_quality.html  ephemeris.html  finder.html  fluxcat.html  hfbcat.html  holography.html  (+6 more)
docs/_sources/: index.rst.txt  reference.rst.txt
docs/_static/: documentation_options.js
scripts/: alpenhorn_holography.py  scan2txt.py  update_psrcat.py
scripts/hkp_analysis/: analyzing-hkpdata-demo-20180202.html  analyzing-hkpdata-demo-20180202.ipynb  analyzing-hkpdata-demo-20180202.py  daily_gpu_power.py  hk-power-pkl.py
scripts/singleuse/: Dockerfile  generate_acq_test_data_1_0.py  generate_archive_test_data_2_X.py  generate_archive_test_data_3_X.py  migrate_db.py
scripts/sql/: create_db_tables.sql  layout_new_changes.sql  new_layout_tag.sql
tests/: data_paths.py  test_andata.py  test_andata_archive2.py  test_andata_archive3.py  test_andata_dist.py  test_db.py  test_ephemeris.py
(+17 files in other folders)
