[build-system]
requires = ["setuptools>=61.0.0", "wheel", "setuptools-git-versioning"]
build-backend = "setuptools.build_meta"

[project]
name = "ch_util"
authors = [
  {name = "The CHIME Collaboration", email = "dvw@phas.ubc.ca"}
]
description = "Utilities for CHIME"
requires-python = ">=3.10"
dynamic = ["readme", "version"]
license = {file = "LICENSE"}
dependencies = [
    "caput[compression] @ git+https://github.com/radiocosmology/caput.git",
    "ch_ephem @ git+https://github.com/chime-experiment/ch_ephem.git", 
    "chimedb @ git+https://github.com/chime-experiment/chimedb.git",
    "chimedb.data_index @ git+https://github.com/chime-experiment/chimedb_di.git",
    "chimedb.dataflag @ git+https://github.com/chime-experiment/chimedb_dataflag.git",
    "chimedb.dataset @ git+https://github.com/chime-experiment/chimedb_dataset.git",
    "fluxcat @ git+https://github.com/radiocosmology/fluxcat.git",
    "bitshuffle",
    "click",
    "h5py",
    "matplotlib",
    "mpi4py",
    "networkx >= 2.0",
    "numpy >= 1.24",
    "peewee >= 3.14.1",
    "scipy>=1.14",
    "skyfield >= 1.10",
    "tabulate"
]

[project.optional-dependencies]
chimedb_config = [
    "chimedb.config @ git+ssh://git@github.com/chime-experiment/chimedb_config.git"
]
doc = [
    "mock",
    "numpydoc",
    "PyYAML",
    "Sphinx",
    "sphinx_rtd_theme",
    "sphinxcontrib-katex"
]
test = [
  "pytest >= 7.0"
]

[project.scripts]
alpenhorn_holography = "ch_util.holography_cli:cli"

[tool.ruff]
lint.select = ["E", "F", "UP", "NPY", "BLE", "C4", "RET"]
lint.ignore = []
target-version = "py310"

[tool.setuptools.package-data]
"ch_util.catalogs" = ["*.json"]

[tool.setuptools.dynamic]
readme = {file = ["README.md"], content-type = "text/markdown"}

[tool.setuptools-git-versioning]
enabled = true
